openmediavault (6.0.13-1) unstable; urgency=low

  *

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 14 Feb 2022 22:38:03 +0100

openmediavault (6.0.12-2) unstable; urgency=low

  * Various improvements.
  * Update locale files.
  * Add new 'grid' Dashboard widget type.
  * Issue #1210: Remove 'Clear web control panel cache' from
    omv-firstaid. The new UI does not need that anymore.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 08 Feb 2022 21:09:04 +0100

openmediavault (6.0.11-1) unstable; urgency=low

  * Various improvements.
  * Fix issue in SMB recycle cron job.
  * Disable the 'Access control list' button on the shared folder
    page if the selected entry is located on a non-POSIX compliant
    file system.
  * Issue #1204: Improve IPv6 validation in UI.
  * Issue #1205: Add 'Mount Options' column to file system page.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 05 Feb 2022 09:00:47 +0100

openmediavault (6.0.10-1) unstable; urgency=low

  * Update locale files.
  * Make sure SMB recycle bin is cleared immediately when the
    button is pressed in the UI.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 25 Jan 2022 23:29:54 +0100

openmediavault (6.0.9-5) unstable; urgency=low

  * Update locale files.
  * Use systemd watchdog instead of separate daemon.
  * Relocate the user management navigation menu.
  * Issue #1181: Use 'Warning' color for SMART assessment status
    'BAD_SECTOR'.
  * Issue #1189: Add environment variable OMV_NGINX_SITE_WEBGUI_LISTEN_PARAMS
    to be able to customize the nginx listen directive.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 12 Jan 2022 19:53:08 +0100

openmediavault (6.0.8-1) unstable; urgency=low

  * Various improvements.
  * Update locale files.
  * Add the ability to copy and apply the permissions of a shared
    folder to its ACL page.
  * Add 'Conflicts' section in package control; openmediavault