@@ -1,6 +1,7 @@
 openmediavault (6.0.13-1) unstable; urgency=low
 
-  *
+  * Issue #1214: Prevent rendering HTML in datatable column
+    tooltips because Angular does not support that.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 14 Feb 2022 22:38:03 +0100
 
